# IDS-Project

./: .env.example  .gitignore  IDS Project Frame.docx  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_add_mitre_and_threat_intel_columns.py  002_expand_features_verdict_notes.py  003_notifications_audit_hunts.py
backend/app/: config.py  main.py
backend/app/api/: deps.py  schemas.py
backend/app/collectors/: host_windows.py  network.py
backend/app/correlation/: engine.py
backend/app/db/: models.py  session.py
backend/app/detection/: model.py
backend/app/explanation/: llm_explainer.py  templates.py
backend/app/features/: pipeline.py
backend/app/mitre/: mapper.py
backend/app/services/: audit.py  notifications.py  orchestrator.py
backend/app/threat_intel/: blocklist.txt  enricher.py  feed_updater.py
config/: correlation_rules.yaml
dashboard/: Dockerfile  app.py  requirements.txt
dashboard/pages/: host_detail.py  incident_detail.py  overview.py  telemetry_explorer.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: navbar.tsx  providers.tsx  sidebar.tsx  theme-toggle.tsx
frontend/src/lib/: api.ts  useAlertStream.ts  (+1 more)
scripts/: backup-ids.ps1
scripts/soar/: block_ip.ps1
tests/: conftest.py  test_api.py  test_correlation_engine.py  test_explanations.py  test_feature_pipeline.py  test_mitre_mapper.py  test_shap.py  test_soar_hunts.py  test_threat_intel.py  test_ws.py
(+38 files in other folders)
