[project]
name = "ids-project"
version = "3.0.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S"]
ignore = [
    "S101",  # assert used in tests
    "S104",  # binding to 0.0.0.0
    "S603",  # subprocess without shell=True
    "S607",  # partial executable path
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]
